# ExampleUsingCMakeWithQt5

./: CMakeLists.txt  qcustomplot.h  ui_mainwindow.h
